[gd_scene load_steps=7 format=3 uid="uid://llr8clerxhyn"]

[ext_resource type="Script" uid="uid://buhndf7viivg6" path="res://assets/cars/auto.gd" id="1_po63d"]
[ext_resource type="Texture2D" uid="uid://l60nlkuxvhrl" path="res://assets/cars textures/Fiat_UNO_Grande_Azul.png" id="2_po63d"]

[sub_resource type="LabelSettings" id="LabelSettings_po63d"]
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o38vp"]
size = Vector2(1193.7058, 160.5824)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_po63d"]
size = Vector2(138, 163)

[sub_resource type="LabelSettings" id="LabelSettings_ko1h0"]
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="auto" type="CharacterBody2D" groups=["auto"]]
scale = Vector2(0.5, 0.5)
collision_layer = 2
collision_mask = 8
script = ExtResource("1_po63d")

[node name="LabelTarea" type="Label" parent="."]
offset_left = -34.0
offset_top = -128.0
offset_right = 16.0
offset_bottom = -105.0
scale = Vector2(1.6179938, 1.4228282)
text = "TEXTO"
label_settings = SubResource("LabelSettings_po63d")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_po63d")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4.007082, 11.000002)
scale = Vector2(1.0220392, -0.97146386)
shape = SubResource("RectangleShape2D_o38vp")

[node name="interaction_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="interaction_area"]
position = Vector2(8, -4)
shape = SubResource("RectangleShape2D_po63d")
debug_color = Color(3.6098064e-07, 0.49991494, 0.2643189, 0.41960785)

[node name="PatienceBar" type="ProgressBar" parent="."]
offset_left = -60.0
offset_top = -156.0
offset_right = 4.0
offset_bottom = -129.0
scale = Vector2(2, 0.893)
max_value = 15.0
value = 15.0
show_percentage = false

[node name="LabelInteractuar" type="Label" parent="."]
offset_left = 95.99999
offset_top = -70.0
offset_right = 177.0
offset_bottom = -47.0
scale = Vector2(1.1599964, 0.9199996)
text = "Presion√° E"
label_settings = SubResource("LabelSettings_ko1h0")
horizontal_alignment = 1

[node name="ScreenNotifier" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(30.520002, 1)
rect = Rect2(-100, -100, 200, 200)

[connection signal="body_entered" from="interaction_area" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="interaction_area" to="." method="_on_interaction_area_body_exited"]
[connection signal="screen_exited" from="ScreenNotifier" to="." method="_on_screen_notifier_screen_exited"]
